adding custom logic to api
